initial data providers